# p4-move-zip-fixer

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/migration-options/: README.md  p4-push-fixer-SPEC.md
docs/migration-options/email/: Question_to_Amdocs_Topology.md
docs/migration-options/option-a-checkpoint/: RUNBOOK.md
docs/migration-options/option-a-checkpoint/scripts/: parity-report.sh  preflight-checks.sh
docs/migration-options/option-b-clone-and-sanitize/: RUNBOOK.md
docs/migration-options/option-b-clone-and-sanitize/scripts/: auto-skip-zip.py  find-orphan-moves.py  sanitize-clone.py  sliced-unzip.py  sliced-zip.py
docs/migration-options/option-c-filtered-replication/: RUNBOOK.md
docs/migration-options/option-c-filtered-replication/scripts/: check-replica-health.sh  promote-replica.sh
docs/outreach/: A_email_to_perforce.md  B_brief_for_perforce.md  C_questions_for_perforce.md  Execution_Plan_Summary.md  p4_move_zip_fixer_presentation.html  render_pdf.py
docs/outreach/pdf/: p4-move-zip-fixer-0.1.0.zip.sha256
src/p4_move_zip_fixer/: __init__.py  cli.py  p4client.py  scan.py  spec.py  store.py  zipper.py
tests/: conftest.py  test_auto_skip_zip.py  test_cli.py  test_scan.py  test_spec.py  test_store.py  test_zipper.py
